# parallel_programming_tutorial

./: .gitignore  README.md
0_odd_even_sort/: README.md  examine_data.py  example.cpp  generate_data.py  odd_even_sort.hpp  run.sh  utils.hpp
1_mandelbrot_set/: CMakeLists.txt  example.cpp  example_omp.cpp  example_pthread.cpp  example_pthread_no_opt.cpp  example_pthread_thread_pool.cpp  install.sh  pthread_pool.hpp  run.sh  thread_pool.hpp  utils.hpp
mpi_tutorial/odd_even_sort/: CMakeLists.txt  example.cpp  install.sh  odd_even_sort.hpp  test_api.cpp  utils.hpp
mpi_tutorial/odd_even_sort/tmp/: CMakeLists.txt
odd_even_sort/: example.cpp  generate_data.py  install.sh  odd_even_sort.hpp
